--- a/C/Trees/Makefile
+++ b/C/Trees/Makefile
@@ -9,7 +9,10 @@ all:$(BINS)
 BinarySearchTree.o: BinarySearchTree.c 
 	$(CC) $(CFLAGS) -c $^
 
-lib_mytreesstatic.a: BinarySearchTree.o
+AVLtree.o: AVLtree.c 
+	$(CC) $(CFLAGS) -c $^
+
+lib_mytreesstatic.a: BinarySearchTree.o AVLtree.o
 	ar rcs $@ $^ 
 
 lib_mytreesdynamic.so: *.o 
@@ -18,7 +21,7 @@ lib_mytreesdynamic.so: *.o
 main.o : main.c
 	$(CC) $(CFLAGS) -c $^ -o $@
 
-a.out: main.o BinarySearchTree.o
+a.out: main.o BinarySearchTree.o AVLtree.o
 	$(CC) $(CFLAGS) -o $@ $^
 
 static_a.out: main.o
