Red Black Tree added

--- a/C/Trees/Makefile
+++ b/C/Trees/Makefile
@@ -12,10 +12,13 @@ BinarySearchTree.o: BinarySearchTree.c
 AVLtree.o: AVLtree.c 
 	$(CC) $(CFLAGS) -c $^
 
+RedBlackTree.o: RedBlackTree.c 
+	$(CC) $(CFLAGS) -c $^
+
 myNodes.o: myNodes.c 
 	$(CC) $(CFLAGS) -c $^
 
-lib_mytreesstatic.a: BinarySearchTree.o AVLtree.o myNodes.o
+lib_mytreesstatic.a: BinarySearchTree.o AVLtree.o RedBlackTree.o myNodes.o
 	ar rcs $@ $^ 
 
 lib_mytreesdynamic.so: *.o 
@@ -24,7 +27,7 @@ lib_mytreesdynamic.so: *.o
 main.o : main.c
 	$(CC) $(CFLAGS) -c $^ -o $@
 
-a.out: main.o BinarySearchTree.o AVLtree.o myNodes.o
+a.out: main.o BinarySearchTree.o AVLtree.o RedBlackTree.o myNodes.o
 	$(CC) $(CFLAGS) -o $@ $^
 
 static_a.out: main.o
